--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -18,29 +18,39 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjo-so-Ggs">
-                                    <rect key="frame" x="8" y="15" width="195" height="30"/>
-                                    <state key="normal" title="Edit"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgF-CM-NjV">
+                                    <rect key="frame" x="143.5" y="15" width="127" height="30"/>
+                                    <state key="normal" title="Favorites"/>
                                     <connections>
-                                        <action selector="toggleEditingMode:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="TPX-E7-Ml5"/>
+                                        <action selector="showFavorites:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="Ou6-tB-Vpg"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fd9-k8-pdS">
-                                    <rect key="frame" x="211" y="15" width="195" height="30"/>
+                                    <rect key="frame" x="278.5" y="15" width="127.5" height="30"/>
                                     <state key="normal" title="Add"/>
                                     <connections>
                                         <action selector="addNewItem:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="FbK-jG-blL"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjo-so-Ggs">
+                                    <rect key="frame" x="8" y="15" width="127.5" height="30"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="TPX-E7-Ml5"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="leading" secondItem="Bjo-so-Ggs" secondAttribute="trailing" constant="8" id="06v-uk-IxZ"/>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="width" secondItem="Bjo-so-Ggs" secondAttribute="width" id="25b-co-oE7"/>
-                                <constraint firstItem="Bjo-so-Ggs" firstAttribute="leading" secondItem="eCa-7u-5RA" secondAttribute="leading" constant="8" id="2sq-gz-afH"/>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="Hmz-5N-YoG"/>
+                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="1fe-Cf-JHc"/>
+                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="leading" secondItem="fgF-CM-NjV" secondAttribute="trailing" constant="8" id="2Ob-Tp-1N2"/>
+                                <constraint firstItem="Bjo-so-Ggs" firstAttribute="leading" secondItem="eCa-7u-5RA" secondAttribute="leading" constant="8" id="2pM-wv-UuQ"/>
+                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="width" secondItem="Bjo-so-Ggs" secondAttribute="width" id="Ptb-8j-meI"/>
+                                <constraint firstItem="fgF-CM-NjV" firstAttribute="width" secondItem="Bjo-so-Ggs" secondAttribute="width" id="Vdu-jJ-LHr"/>
+                                <constraint firstItem="fgF-CM-NjV" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="ZsL-et-b8e"/>
                                 <constraint firstItem="Bjo-so-Ggs" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="fg3-oZ-Cvb"/>
-                                <constraint firstAttribute="trailing" secondItem="Fd9-k8-pdS" secondAttribute="trailing" constant="8" id="u5Q-B4-aUN"/>
+                                <constraint firstAttribute="trailing" secondItem="Fd9-k8-pdS" secondAttribute="trailing" constant="8" id="kT3-CZ-3gO"/>
+                                <constraint firstItem="fgF-CM-NjV" firstAttribute="leading" secondItem="Bjo-so-Ggs" secondAttribute="trailing" constant="8" id="pRo-I3-W4I"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -74,6 +84,9 @@
                             <outlet property="delegate" destination="7ev-JQ-OHj" id="y5g-JS-mVZ"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="btnFavorites" destination="fgF-CM-NjV" id="FAO-Xd-UzL"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="koF-Yj-WSe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
