--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--LootLogger-->
         <scene sceneID="3VU-6B-U4V">
             <objects>
                 <tableViewController id="7ev-JQ-OHj" customClass="ItemsViewController" customModule="LootLogger" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,38 +20,18 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgF-CM-NjV">
-                                    <rect key="frame" x="143.5" y="15" width="127" height="30"/>
+                                    <rect key="frame" x="10" y="15" width="394" height="30"/>
                                     <state key="normal" title="Favorites"/>
                                     <connections>
                                         <action selector="showFavorites:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="Ou6-tB-Vpg"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fd9-k8-pdS">
-                                    <rect key="frame" x="278.5" y="15" width="127.5" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="FbK-jG-blL"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjo-so-Ggs">
-                                    <rect key="frame" x="8" y="15" width="127.5" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="7ev-JQ-OHj" eventType="touchUpInside" id="TPX-E7-Ml5"/>
-                                    </connections>
-                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="1fe-Cf-JHc"/>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="leading" secondItem="fgF-CM-NjV" secondAttribute="trailing" constant="8" id="2Ob-Tp-1N2"/>
-                                <constraint firstItem="Bjo-so-Ggs" firstAttribute="leading" secondItem="eCa-7u-5RA" secondAttribute="leading" constant="8" id="2pM-wv-UuQ"/>
-                                <constraint firstItem="Fd9-k8-pdS" firstAttribute="width" secondItem="Bjo-so-Ggs" secondAttribute="width" id="Ptb-8j-meI"/>
-                                <constraint firstItem="fgF-CM-NjV" firstAttribute="width" secondItem="Bjo-so-Ggs" secondAttribute="width" id="Vdu-jJ-LHr"/>
-                                <constraint firstItem="fgF-CM-NjV" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="ZsL-et-b8e"/>
-                                <constraint firstItem="Bjo-so-Ggs" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="fg3-oZ-Cvb"/>
-                                <constraint firstAttribute="trailing" secondItem="Fd9-k8-pdS" secondAttribute="trailing" constant="8" id="kT3-CZ-3gO"/>
-                                <constraint firstItem="fgF-CM-NjV" firstAttribute="leading" secondItem="Bjo-so-Ggs" secondAttribute="trailing" constant="8" id="pRo-I3-W4I"/>
+                                <constraint firstItem="fgF-CM-NjV" firstAttribute="centerY" secondItem="eCa-7u-5RA" secondAttribute="centerY" id="SSn-e4-ecp"/>
+                                <constraint firstItem="fgF-CM-NjV" firstAttribute="leading" secondItem="eCa-7u-5RA" secondAttribute="leading" constant="10" id="Vsj-PQ-JXm"/>
+                                <constraint firstAttribute="trailing" secondItem="fgF-CM-NjV" secondAttribute="trailing" constant="10" id="xfo-D8-7lc"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -109,7 +89,13 @@
                             <outlet property="delegate" destination="7ev-JQ-OHj" id="y5g-JS-mVZ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="nIz-Oc-ayi"/>
+                    <navigationItem key="navigationItem" title="LootLogger" id="YCy-h4-yOv">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ZKq-u5-hFI">
+                            <connections>
+                                <action selector="addNewItem:" destination="7ev-JQ-OHj" id="cAb-v2-Aqo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="btnFavorites" destination="fgF-CM-NjV" id="FAO-Xd-UzL"/>
                     </connections>
@@ -142,6 +128,9 @@
                                                 <rect key="frame" x="51" y="0.0" width="347" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="EBU-GG-J5R" id="0Mz-Vb-GJv"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -158,6 +147,9 @@
                                                 <rect key="frame" x="51" y="0.0" width="347" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="EBU-GG-J5R" id="ecA-eg-3wK"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -174,14 +166,21 @@
                                                 <rect key="frame" x="51" y="0.0" width="347" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="EBU-GG-J5R" id="AHI-gv-GZ3"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6F-qO-8Z6">
                                         <rect key="frame" x="0.0" y="126" width="398" height="632"/>
+                                        <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="lqa-So-bgQ" appends="YES" id="C87-eV-uEw"/>
+                                        </connections>
                                     </label>
                                 </subviews>
                                 <constraints>
@@ -198,6 +197,9 @@
                             <constraint firstItem="lQA-vz-PfO" firstAttribute="trailing" secondItem="MW9-DA-Ftz" secondAttribute="trailing" constant="8" id="vOj-xS-y80"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lQA-vz-PfO"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="lqa-So-bgQ" appends="YES" id="eBd-ex-7Tc"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="X79-EL-rVC"/>
                     <connections>
@@ -208,6 +210,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xbg-Tw-cD3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="lqa-So-bgQ">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="EBU-GG-J5R" id="ryp-ss-jAD"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1750.7246376811595" y="128.57142857142856"/>
         </scene>
